スコア評価を削除

--- a/index.html
+++ b/index.html
@@ -1112,298 +1112,6 @@
             outline-offset: 2px;
         }
 
-        /* ========== スコア評価モーダル ========== */
-        #scoreModal {
-            display: none;
-            position: fixed;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-            background: rgba(0, 0, 0, 0.5);
-            backdrop-filter: blur(12px);
-            z-index: 10000;
-            animation: fadeIn 0.3s var(--transition-smooth);
-            overflow: visible;
-        }
-
-        #scoreModal.show {
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            overflow: visible;
-        }
-
-        .score-modal-content {
-            background: linear-gradient(145deg, rgba(255, 255, 255, 0.85), rgba(248, 249, 250, 0.85));
-            backdrop-filter: blur(60px) saturate(180%);
-            -webkit-backdrop-filter: blur(60px) saturate(180%);
-            border: 0.5px solid rgba(255, 255, 255, 0.9);
-            border-radius: var(--radius-2xl);
-            box-shadow:
-                0 30px 80px rgba(0, 0, 0, 0.15),
-                0 0 0 0.5px rgba(255, 255, 255, 0.9) inset,
-                0 2px 8px rgba(255, 255, 255, 0.6) inset;
-            width: 90%;
-            max-width: 600px;
-            padding: 60px 48px;
-            text-align: center;
-            position: relative;
-            animation: slideUp 0.4s var(--transition-smooth);
-            overflow: visible;
-        }
-
-        .score-close {
-            position: absolute;
-            top: 24px;
-            right: 24px;
-            width: 32px;
-            height: 32px;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            font-size: 24px;
-            color: rgba(0, 0, 0, 0.4);
-            cursor: pointer;
-            transition: all 0.2s var(--transition-smooth);
-            border-radius: 50%;
-            background: rgba(0, 0, 0, 0.03);
-        }
-
-        .score-close:hover {
-            background: rgba(0, 0, 0, 0.08);
-            color: rgba(0, 0, 0, 0.7);
-            transform: scale(1.1);
-        }
-
-        .score-title {
-            font-size: 1.5em;
-            font-weight: 600;
-            margin-bottom: 48px;
-            color: rgba(0, 0, 0, 0.85);
-            letter-spacing: -0.02em;
-        }
-
-        /* スロットコンテナ */
-        .score-gauge-container {
-            position: relative;
-            width: 100%;
-            margin: 0 auto 48px;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-        }
-
-        /* ランク表示 - 高級感のあるスロット */
-        .score-rank {
-            position: relative;
-            width: 200px;
-            height: 200px;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            background: linear-gradient(145deg, rgba(255, 255, 255, 0.8), rgba(248, 249, 250, 0.8));
-            backdrop-filter: blur(40px) saturate(180%);
-            -webkit-backdrop-filter: blur(40px) saturate(180%);
-            border-radius: 50%;
-            box-shadow:
-                0 20px 40px rgba(0, 0, 0, 0.08),
-                0 0 0 0.5px rgba(255, 255, 255, 0.9) inset,
-                0 0 60px rgba(0, 0, 0, 0.03);
-            border: 3px solid rgba(255, 255, 255, 0.95);
-        }
-
-        .score-rank-container {
-            font-size: 6em;
-            font-weight: 800;
-            letter-spacing: -0.03em;
-        }
-
-        .score-rank-item {
-            display: inline-block;
-        }
-
-        /* スライドアニメーション */
-        @keyframes slideIn {
-            from {
-                opacity: 0;
-                transform: translateX(50px);
-            }
-            to {
-                opacity: 1;
-                transform: translateX(0);
-            }
-        }
-
-        @keyframes slideOut {
-            from {
-                opacity: 1;
-                transform: translateX(0);
-            }
-            to {
-                opacity: 0;
-                transform: translateX(-50px);
-            }
-        }
-
-        @keyframes confirmPop {
-            0% {
-                transform: scale(1);
-            }
-            50% {
-                transform: scale(1.2);
-            }
-            70% {
-                transform: scale(0.95);
-            }
-            100% {
-                transform: scale(1);
-            }
-        }
-
-        .score-rank-item.slide-in {
-            animation: slideIn 0.1s ease-out forwards;
-        }
-
-        .score-rank-item.slide-out {
-            animation: slideOut 0.1s ease-in forwards;
-        }
-
-        .score-rank-item.confirm {
-            animation: confirmPop 0.4s ease-out forwards;
-        }
-
-        /* ランク別カラー - 落ち着いた配色 */
-        .score-rank.rank-S {
-            background: linear-gradient(145deg, rgba(255, 223, 0, 0.15), rgba(255, 240, 100, 0.15));
-            border-color: rgba(255, 215, 0, 0.4);
-        }
-
-        .score-rank.rank-S .score-rank-container {
-            color: #D4AF37;
-            text-shadow: 0 2px 20px rgba(212, 175, 55, 0.3);
-        }
-
-        .score-rank.rank-A {
-            background: linear-gradient(145deg, rgba(0, 122, 255, 0.08), rgba(0, 122, 255, 0.12));
-            border-color: rgba(0, 122, 255, 0.3);
-        }
-
-        .score-rank.rank-A .score-rank-container {
-            color: #007AFF;
-            text-shadow: 0 2px 20px rgba(0, 122, 255, 0.2);
-        }
-
-        .score-rank.rank-B {
-            background: linear-gradient(145deg, rgba(52, 199, 89, 0.08), rgba(52, 199, 89, 0.12));
-            border-color: rgba(52, 199, 89, 0.3);
-        }
-
-        .score-rank.rank-B .score-rank-container {
-            color: #34C759;
-            text-shadow: 0 2px 20px rgba(52, 199, 89, 0.2);
-        }
-
-        .score-rank.rank-C {
-            background: linear-gradient(145deg, rgba(255, 149, 0, 0.08), rgba(255, 149, 0, 0.12));
-            border-color: rgba(255, 149, 0, 0.3);
-        }
-
-        .score-rank.rank-C .score-rank-container {
-            color: #FF9500;
-            text-shadow: 0 2px 20px rgba(255, 149, 0, 0.2);
-        }
-
-        .score-rank.rank-D {
-            background: linear-gradient(145deg, rgba(255, 59, 48, 0.08), rgba(255, 59, 48, 0.12));
-            border-color: rgba(255, 59, 48, 0.3);
-        }
-
-        .score-rank.rank-D .score-rank-container {
-            color: #FF3B30;
-            text-shadow: 0 2px 20px rgba(255, 59, 48, 0.2);
-        }
-
-        .score-rank.rank-E {
-            background: linear-gradient(145deg, rgba(142, 142, 147, 0.08), rgba(142, 142, 147, 0.12));
-            border-color: rgba(142, 142, 147, 0.3);
-        }
-
-        .score-rank.rank-E .score-rank-container {
-            color: #8E8E93;
-            text-shadow: 0 2px 20px rgba(142, 142, 147, 0.2);
-        }
-
-        /* スコア詳細 - 高級感のあるデザイン */
-        .score-details {
-            margin-top: 40px;
-            text-align: left;
-            background: linear-gradient(145deg, rgba(255, 255, 255, 0.75), rgba(248, 249, 250, 0.75));
-            backdrop-filter: blur(30px) saturate(180%);
-            -webkit-backdrop-filter: blur(30px) saturate(180%);
-            padding: 28px;
-            border-radius: var(--radius-lg);
-            font-size: 14px;
-            border: 1px solid rgba(0, 0, 0, 0.06);
-            box-shadow: 0 4px 12px rgba(0, 0, 0, 0.04);
-        }
-
-        .score-detail-item {
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-            margin-bottom: 16px;
-            padding-bottom: 16px;
-            border-bottom: 1px solid rgba(0, 0, 0, 0.04);
-        }
-
-        .score-detail-item:last-child {
-            border-bottom: none;
-            margin-bottom: 0;
-            padding-bottom: 0;
-        }
-
-        .score-detail-label {
-            color: rgba(0, 0, 0, 0.6);
-            font-weight: 500;
-            font-size: 14px;
-            letter-spacing: -0.01em;
-        }
-
-        .score-detail-value {
-            color: rgba(0, 0, 0, 0.9);
-            font-weight: 700;
-            font-size: 15px;
-            letter-spacing: -0.01em;
-        }
-
-        /* クラッカーエフェクト */
-        .confetti {
-            position: absolute;
-            width: 10px;
-            height: 10px;
-            background: #FFD700;
-            border-radius: 50%;
-            z-index: 1000;
-            pointer-events: none;
-        }
-
-        /* 自然な散らばりアニメーション */
-        @keyframes confettiBurst {
-            0% {
-                transform: translate(0, 0) rotate(0deg) scale(1);
-                opacity: 1;
-            }
-            100% {
-                transform: translate(var(--tx), var(--ty)) rotate(var(--rot)) scale(0.1);
-                opacity: 0;
-            }
-        }
-
-        .confetti {
-            animation: confettiBurst var(--duration) cubic-bezier(0.25, 0.46, 0.45, 0.94) forwards;
-        }
-
         /* 景品一覧ページ用スタイル */
         .prize-master-list {
             display: grid;
@@ -1877,12 +1585,9 @@
                         </button>
                     </div>
 
-                    <div style="display: flex; gap: 12px; margin-top: 16px;">
-                        <button class="btn btn-success" onclick="calculate()" style="flex: 1; font-size: 16px; padding: 14px;">
+                    <div style="margin-top: 16px;">
+                        <button class="btn btn-success" onclick="calculate()" style="width: 100%; font-size: 16px; padding: 14px;">
                             🧮 計算する
-                        </button>
-                        <button class="btn btn-primary" onclick="showScoreEvaluation()" style="flex: 1; font-size: 16px; padding: 14px;">
-                            ⭐ スコア評価
                         </button>
                     </div>
                     <button class="btn btn-accent" onclick="saveOripa()" style="width: 100%; font-size: 16px; padding: 14px; margin-top: 12px;">
