--- a/index.html
+++ b/index.html
@@ -1661,12 +1661,12 @@
                     <div class="add-prize-form">
                         <div class="form-group">
                             <label>景品名</label>
-                            <div style="display: flex; gap: 8px;">
-                                <input type="text" id="prizeName" placeholder="例: レアカード" style="flex: 1;">
-                                <button class="btn btn-primary" onclick="selectFromPrizeMasterForMain()" style="white-space: nowrap; padding: 0 12px;">
+                            <input type="text" id="prizeName" placeholder="例: レアカード">
+                            <div style="display: flex; gap: 8px; margin-top: 8px;">
+                                <button class="btn btn-primary" onclick="selectFromPrizeMasterForMain()" style="flex: 1; white-space: nowrap;">
                                     📋 マスターから選択
                                 </button>
-                                <button class="btn btn-accent" onclick="selectFromTemporaryPrizeMaster()" style="white-space: nowrap; padding: 0 12px; background: var(--sf-orange);">
+                                <button class="btn btn-accent" onclick="selectFromTemporaryPrizeMaster()" style="flex: 1; white-space: nowrap; background: var(--sf-orange);">
                                     📝 仮装景品から選択
                                 </button>
                             </div>
